--- a/acme_project/templates/birthday/birthday.html
+++ b/acme_project/templates/birthday/birthday.html
@@ -16,13 +16,17 @@
         Калькулятор ожидания дня рождения
       </div>
       <div class="card-body">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
           {% csrf_token %}
-          {% bootstrap_form form %}
+          {% if not "/delete/" in request.path %}
+            {% bootstrap_form form %}
+          {% else %}
+            <p>{{ data.first_name }} {{ data.last_name }}</p>
+            <p>{{ data.birthday }}</p>
+          {% endif %}
           {% bootstrap_button button_type="submit" content="Отправить" %}
         </form>
       </div>
-    </div>
     {% if form.is_valid %}
       ID записи в БД: {{ data.id }}
       <hr>
